[gd_scene load_steps=36 format=1]

[ext_resource path="res://scripts/root.gd" type="Script" id=1]
[ext_resource path="res://scenes/terminator.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/area del_pickup.gd" type="Script" id=3]
[ext_resource path="res://scripts/light.gd" type="Script" id=4]
[ext_resource path="res://addons/animated_camera/animated_camera.gd" type="Script" id=5]
[ext_resource path="res://addons/animated_camera/icon.png" type="Texture" id=6]
[ext_resource path="res://scenes/walls 2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/keys load.gd" type="Script" id=8]
[ext_resource path="res://sprites/circle_r.png" type="Texture" id=9]
[ext_resource path="res://sprites/circle.png" type="Texture" id=10]
[ext_resource path="res://scripts/UI/bullet.gd" type="Script" id=11]
[ext_resource path="res://sprites/1.png" type="Texture" id=12]
[ext_resource path="res://sprites/3.png" type="Texture" id=13]
[ext_resource path="res://scripts/UI/hp.gd" type="Script" id=14]
[ext_resource path="res://sprites/fighter_health spr.tex" type="Texture" id=15]
[ext_resource path="res://scripts/UI/shield.gd" type="Script" id=16]
[ext_resource path="res://sprites/hbar.png" type="Texture" id=17]
[ext_resource path="res://resources/pdark num.fnt" type="BitmapFont" id=18]
[ext_resource path="res://scripts/UI/view_score.gd" type="Script" id=19]
[ext_resource path="res://scripts/UI/rocket.gd" type="Script" id=20]
[ext_resource path="res://sprites/2.png" type="Texture" id=21]
[ext_resource path="res://sprites/coin.png" type="Texture" id=22]
[ext_resource path="res://coins.gd" type="Script" id=23]
[ext_resource path="res://resources/low.tres" type="Environment" id=24]
[ext_resource path="res://scripts/worldenv.gd" type="Script" id=25]
[ext_resource path="res://scripts/timer.gd" type="Script" id=26]
[ext_resource path="res://score.gd" type="Script" id=27]
[ext_resource path="res://scenes/enemy generator.tscn" type="PackedScene" id=28]
[ext_resource path="res://sound/space.ogg" type="AudioStream" id=29]
[ext_resource path="res://scenes/float_menu_pause.tscn" type="PackedScene" id=30]
[ext_resource path="res://resources/polyfont.fnt" type="BitmapFont" id=31]
[ext_resource path="res://scripts/laser generator.gd" type="Script" id=32]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 4.92213, 3.29434 )

[sub_resource type="Animation" id=2]

resource/name = "flash"
length = 1.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("wave:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 1 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="GDScript" id=3]

script/source = "extends Timer

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"
var fps_decide_limit=20
func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_device_test_timeout():
	var f=File.new()
	if !f.file_exists(\"user://gtype.s\"):
		f.open(\"user://gtype.s\",File.WRITE)
		if OS.get_frames_per_second()<fps_decide_limit:
			global_game.high_graphics=false
			f.store_real(0)
		else:
			global_game.high_graphics=true
			f.store_real(1)
		
	else:
		f.open(\"user://gtype.s\",File.READ)
		var x=f.get_float()
		if x:
			global_game.high_graphics=true
		else:
			global_game.high_graphics=false
	f.close()
	queue_free()"

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Area" parent="Spatial" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.0049, 1.47973, 0 )

[node name="Area 2" parent="Spatial" instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.09281, 1.47973, 0 )

[node name="Area3" type="Area" parent="Spatial"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64487, 1.47973, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1048575
collision/mask = 1
script/script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Area3"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Spatial" type="Spatial" parent="Spatial"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="OmniLight" type="OmniLight" parent="Spatial/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.78818e-14, -1.84133, 0 )
visibility/visible = false
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 1
params/energy = 2.5
colors/diffuse = Color( 0.765625, 0.589172, 0.589172, 1 )
colors/specular = Color( 0.046875, 0.0432129, 0.0432129, 1 )
shadow/shadow = true
shadow/darkening = 0.0
shadow/z_offset = 0.001
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 0.0
projector = null
operator = 0
params/radius = 4.56588
params/attenuation = 1.0
script/script = ExtResource( 4 )

[node name="SpotLight" type="SpotLight" parent="Spatial/Spatial/OmniLight"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.0251257, 3.17654e-07, -0.999684, 3.17654e-07, 1, 3.25738e-07, 0.999684, -3.25738e-07, 0.0251257, -0.0265435, 0.563868, -0.0615462 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 3.5
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 0, 0, 0, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 0.0
projector = null
operator = 0
params/radius = 22.881
params/attenuation = 1.0
params/spot_angle = 30.0
params/spot_attenuation = 3.73213

[node name="animated_camera" type="Spatial" parent="Spatial/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.0758131, 6.62779e-09, -0.997122, -0.00752593, -0.999972, 0.000572203, -0.997094, 0.00754765, 0.0758109, -1.74634, -1.77207, 0.0497594 )
script/script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}
to_pos_node = NodePath("../Position3D")
use_pos_node = true
to_pos = Vector3( 0, 0, 0 )
to_distance = 2.0
to_angle = 20.0
to_circle_angle = 0.0
circling_enabled = false
circling_seconds = 4.0
to_fovy = 60.0
in_seconds = 0.4
transition_progress = 8.0
transition_trigger = true

[node name="Position3D" type="Position3D" parent="Spatial/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.68371e-07, -2.05122, 0 )

[node name="walls 2" parent="Spatial" instance=ExtResource( 7 )]

editor/display_folded = true

[node name="UI" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.7
visibility/blend_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 39.0
margin/top = 80.0
margin/right = 79.0
margin/bottom = 120.0
script/script = ExtResource( 8 )

[node name="bullet" type="TextureProgress" parent="UI"]

visibility/opacity = 0.65
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 788.0
margin/top = 285.0
margin/right = 1319.0
margin/bottom = 816.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 9 )
texture/over = null
texture/progress = ExtResource( 10 )
mode = 4
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/bullet"]

transform/pos = Vector2( -37.5342, -45.4039 )
transform/scale = Vector2( 0.944677, 0.944677 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "pl_fire"
visibility_mode = 0

[node name="health" type="TextureProgress" parent="UI"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -47.0
margin/right = 522.0
margin/bottom = 484.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
texture/under = null
texture/over = null
texture/progress = ExtResource( 9 )
mode = 4
radial_fill/fill_degrees = 359.99
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="UI/health"]

transform/pos = Vector2( 263.825, 264.505 )
transform/scale = Vector2( 0.716317, 0.716317 )
texture = ExtResource( 15 )

[node name="shield" type="TextureProgress" parent="UI/health"]

visibility/behind_parent = true
rect/scale = Vector2( 1.1, 1.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -24.0
margin/top = -29.0
margin/right = 507.0
margin/bottom = 502.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 10 )
mode = 4
radial_fill/fill_degrees = 359.99
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 16 )

[node name="Timer" type="Timer" parent="UI/health/shield"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="Sprite" type="Sprite" parent="UI"]

visibility/opacity = 0.4
transform/pos = Vector2( 186.729, 4.82585 )
transform/scale = Vector2( 0.227099, 0.227099 )
z/z = -4
texture = ExtResource( 17 )

[node name="Sprite1" type="Sprite" parent="UI"]

visibility/opacity = 0.4
transform/pos = Vector2( 189.726, 5.10673 )
transform/scale = Vector2( 0.23293, 0.246304 )
z/z = -4
texture = ExtResource( 17 )
modulate = Color( 0.238281, 0.200119, 0.200119, 1 )

[node name="Score" type="Label" parent="UI"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = -11.0
margin/right = 196.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0.292328, 0.804688, 0.804688, 1 )
text = "SCORE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="UI/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 84.0
margin/top = 0.0
margin/right = 124.0
margin/bottom = 35.0
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0.589966, 0.593931, 0.84375, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 19 )

[node name="rockets" type="TextureProgress" parent="UI"]

editor/display_folded = true
visibility/opacity = 0.71
rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 653.0
margin/top = 325.0
margin/right = 1308.0
margin/bottom = 980.0
range/min = 0.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 9 )
texture/over = null
texture/progress = ExtResource( 10 )
mode = 4
radial_fill/fill_degrees = 359.99
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/rockets"]

transform/pos = Vector2( -51.5099, -43.767 )
transform/scale = Vector2( 0.947447, 0.950433 )
normal = ExtResource( 21 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "roc_fire"
visibility_mode = 0

[node name="Timer" type="Timer" parent="UI/rockets"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="no" type="Label" parent="UI/rockets"]

rect/scale = Vector2( 10, 10 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 532.0
margin/top = -112.0
margin/right = 554.0
margin/bottom = -89.0
custom_fonts/font = ExtResource( 18 )
text = "5"
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="coins" type="Sprite" parent="UI"]

editor/display_folded = true
transform/pos = Vector2( 783.211, -14.6253 )
transform/scale = Vector2( 0.242905, 0.242905 )
texture = ExtResource( 22 )

[node name="ccoin" type="Label" parent="UI/coins"]

rect/scale = Vector2( 6, 6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = -62.0
margin/right = 250.0
margin/bottom = -27.0
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0.848728, 0.921875, 0.547363, 1 )
custom_colors/font_color_shadow = Color( 0.412333, 0.4375, 0.189697, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 23 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = ExtResource( 24 )
script/script = ExtResource( 25 )

[node name="Node" type="Node" parent="."]

editor/display_folded = true

[node name="bullet restore" type="Timer" parent="Node"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true
script/script = ExtResource( 26 )

[node name="score" type="Timer" parent="Node"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false
script/script = ExtResource( 27 )

[node name="wave_break" type="Timer" parent="Node/score"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="enemy generator" parent="." instance=ExtResource( 28 )]

editor/display_folded = true
transform/local = Transform( -1.55803e-07, 0, 0.956313, 0, 0.956313, 0, -0.956313, 0, -1.55803e-07, -25.9492, 2.51497, 0 )

[node name="pt1" parent="enemy generator"]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77021, 1.85885, -2.88405e-07 )

[node name="pt2" parent="enemy generator"]

transform/local = Transform( 1, 0, -2.54659e-15, 0, 1, 0, 2.54659e-15, 0, 1, 1.74234, 1.81169, 1.61807e-07 )

[node name="pt3" parent="enemy generator"]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.72505, -1.82557, -2.81048e-07 )

[node name="pt4" parent="enemy generator"]

transform/local = Transform( 1, 0, -2.54659e-15, 0, 1, 0, 2.54659e-15, 0, 1, 1.79077, -1.86836, 1.69696e-07 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 29 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="game_pause" parent="." instance=ExtResource( 30 )]

[node name="wave" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 7.0
margin/right = 40.0
margin/bottom = 47.0

[node name="wave" type="Label" parent="wave"]

visibility/opacity = 0.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 301.0
margin/top = 242.0
margin/right = 501.0
margin/bottom = 290.0
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 0.71875, 0.640137, 0, 1 )
custom_colors/font_color_shadow = Color( 0.261719, 0.252134, 0.0163574, 1 )
custom_constants/shadow_offset_x = 1
text = "WAVE 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="wave"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="laser generator" type="Position3D" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.492, 2.10996, 0 )
script/script = ExtResource( 32 )

[node name="Timer" type="Timer" parent="laser generator"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="device_test" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true
script/script = SubResource( 3 )

[connection signal="body_enter" from="Spatial/Area3" to="Spatial/Area3" method="_on_Area_body_enter"]

[connection signal="visibility_changed" from="UI" to="." method="_on_UI_visibility_changed"]

[connection signal="timeout" from="UI/health/shield/Timer" to="UI/health/shield" method="_on_Timer_timeout"]

[connection signal="visibility_changed" from="UI/coins/ccoin" to="UI/coins/ccoin" method="_on_ccoin_visibility_changed"]

[connection signal="timeout" from="Node/bullet restore" to="Node/bullet restore" method="_on_Timer_timeout"]

[connection signal="timeout" from="Node/score" to="Node/score" method="_on_score_timeout"]

[connection signal="timeout" from="Node/score/wave_break" to="Node/score" method="_on_wave_break_timeout"]

[connection signal="timeout" from="laser generator/Timer" to="laser generator" method="_on_Timer_timeout"]

[connection signal="timeout" from="device_test" to="device_test" method="_on_device_test_timeout"]


[editable path="Spatial/walls 2"]
[editable path="enemy generator"]
